# rust-lambda-cd

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: core.rs  main.rs
src/util/: mod.rs  test.rs
