[package]
name = "rust-lambda-cd"
version = "0.1.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
aws_lambda_events = "0.2.5"
rusoto_core = {version = "0.43.0-beta.1", default-features = false, features = ["rustls"]}
rusoto_lambda = {version = "0.43.0-beta.1", default-features = false, features = ["rustls"]}
tokio = "0.2.11"